<resources>
    <string name="app_name">Praktikum12-Kalkulator3</string>
    <string name="action_settings">Settings</string>
    <string name="numAngka1"></string>
    <string name="numAngka2"></string>
    <string name="lblHasil">Hasil</string>
    <string name="samaDengan">=</string>
    <string name="kali">x</string>
    <string name="bagi">/</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
</resources>
